--- a/cv-application/src/components/Display/Display.module.css
+++ b/cv-application/src/components/Display/Display.module.css
@@ -10,10 +10,3 @@ p {
   flex-direction: column;
   width: 100%;
 }
-.name,
-.email {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
